# terra

./: .gitignore  CHANGELOG.md  LICENSE  README.md  environment.yaml  eval.py  main.py  main_dist.py  main_distributed.py  main_sweep.py  pyproject.toml  run_inference.py  run_multiple_seed.sh  simple_infer_runner.py  temp.txt
.github/workflows/: model-smoke.yml  release.yaml  test.yaml
app/: main.py  main_distributed.py  scaffold.py
app/nemo/: train.py
configs/: cnd_gtb10_ep300.yaml  eval.yaml  merfish.yaml  merfish_2_gene_panels.yaml  merfish_2_gene_panels_new.yaml  merfish_300k.yaml  merfish_300k_2_gene_panels.yaml  merfish_300k_working.yaml  scgpt.yaml  simulated.yaml  simulated_100k.yaml  starmap_merfish_mouse_brain_1_gene_panel.yaml  template.yaml  test.yaml
configs/.ipynb_checkpoints/: merfish-checkpoint.yaml  scgpt-checkpoint.yaml  simulated-checkpoint.yaml  test-checkpoint.yaml
configs/job/: bsub_script.sh  bsub_script_gpu_parallel.sh  bsub_script_tiger.sh  bsub_script_tiger_reserv_id.sh  bsub_submit.sh  bsub_submit_gpu_parallel.sh  bsub_submit_tiger.sh  example.yaml  hst_corpus_70m_gpu-cellgen-restricted.yaml  hst_corpus_70m_gpu-lotfollahi.yaml  hst_corpus_70m_gpu-parallel.yaml  hst_corpus_70m_gpu-parallel2.yaml  hst_corpus_70m_test.yaml  mmb0-1b_smb1-1b_2p.yaml  xhs49-1b_1p_test.yaml
configs/model/: hst_corpus_70m_gt_base.yaml  hst_corpus_70m_gt_base2.yaml  hst_corpus_70m_gt_base_2cellmask.yaml  hst_corpus_70m_gt_base_4blockmask.yaml  hst_corpus_70m_gt_base_6blockmask.yaml  hst_corpus_70m_gt_base_80mask.yaml  hst_corpus_70m_gt_base_rank_sep_gene_tokens_neb.yaml  hst_corpus_70m_gt_base_sep_gene_tokens_neb.yaml  hst_corpus_70m_gt_giant.yaml  hst_corpus_70m_gt_huge.yaml  hst_corpus_70m_gt_large.yaml  hst_corpus_70m_gt_small.yaml  hst_corpus_70m_gt_small_sep_gene_tokens_neb.yaml  hst_corpus_70m_gt_tiny.yaml  hst_corpus_70m_load_cp.yaml  hst_corpus_70m_sampling.yaml  hst_corpus_70m_test.yaml  mmb0-1b_smb1-1b_2p.yaml
docs/: api.md  conf.py  contributing.md  index.md  installation.md  requirements.txt  tutorials.md  user_guide.md
docs/extensions/: typed_returns.py
docs/notebooks/: NicheJepa.ipynb  downstream_analysis.ipynb  perturbation_tutorial.ipynb  spatial_mapping_tutorial.ipynb  terra_tutorial.ipynb  zero_shot_quickstart.ipynb  zero_shot_quickstart_multisample.ipynb
job_config/: gpu-lotfollahi.yaml  gpu-lotfollahi2.yaml  gpu-parallel.yaml  gpu-parallel2.yaml  job_config.yaml  runner.sh  test.yaml  xhs1000-39b_1p.yaml  xhs49-1b_1p.yaml
logs/cnd_gtb10_ep300/: jepa_r0.csv  params-ijepa.yaml
nichejepa/: __init__.py
nichejepa/aggregators/: __init__.py  aggregate_by_radius.py
nichejepa/normalizers/: __init__.py  analytic_pearson_residuals.py  cell_area.py  mean.py  mean_normalize.py  non_zero_median.py  seurat.py  shifted_log.py  shifted_log_mean.py
nichejepa/preprocessers/: filter_poor_quality_cells.py
nichejepa/preprocessors/: __init__.py
nichejepa/tokenizers/: __init__.py  cell_graph_rank_tokenizer.py  cell_neighborhood_rank_tokenizer.py  tokenize.py
nichejepa/utils/: genes.py
reproducibility_notebook_pre_merge/: NicheJepa.ipynb
scripts/: bsub_script.sh  bsub_script_tiger.sh  bsub_script_tiger_normal_reservation.sh  bsub_script_tiger_parallel_reservation.sh  bsub_submit.sh  bsub_submit_tiger.sh  bsub_submit_tiger_normal_reservation.sh  bsub_submit_tiger_parallel_reservation.sh  cluster_env.example.sh  train_model_lsf_mpirun_sanger.sh  train_model_slurm_torchrun.example.sh
src/app/: count_decoder.py  finetune.py  helper.py  huggingface.py  infer.py  main.py  main_dist.py  main_dist_new.py  train.py  train_model.sh  train_model_slurm.sh  train_model_slurm_srun.sh  train_model_slurm_torchrun.sh  train_model_slurm_torchrun_aws.sh  train_model_slurm_torchrun_aws_gtbase.sh  train_model_slurm_torchrun_aws_gtbase_reordered.sh  train_model_slurm_torchrun_aws_gtbase_reordered_70m.sh  train_model_slurm_torchrun_aws_gtcustom.sh  train_model_slurm_torchrun_aws_gtlarge_reordered.sh  train_model_slurm_torchrun_aws_gtsmall.sh  train_model_slurm_torchrun_aws_gtsmall_0.01_sample.sh  train_model_slurm_torchrun_aws_gtsmall_0.1_sample.sh  train_model_slurm_torchrun_aws_gtsmall_0.25_sample.sh  train_model_slurm_torchrun_aws_gtsmall_0.5_sample.sh  train_model_slurm_torchrun_aws_gtsmall_1024_seqlen.sh  train_model_slurm_torchrun_aws_gtsmall_counts.sh  train_model_slurm_torchrun_aws_gtsmall_full.sh  train_model_slurm_torchrun_aws_gtsmall_hst_corpus_90m.sh  train_model_slurm_torchrun_aws_gtsmall_reordered.sh  train_model_slurm_torchrun_aws_gtsmall_test.sh  train_model_slurm_torchrun_aws_gttiny.sh  train_model_slurm_torchrun_aws_gttiny_reordered.sh  train_model_slurm_torchrun_hmgu.sh  wrapper_train_model.sh  wrapper_train_model_slurm.sh
src/niche-jepa/: __init__.py
src/nichejepa/: __init__.py  aggregate.py  eval.py  eval_sweep.py  feature_extractor.py  helper.py  infer.py  logistic_knn.py  logistic_reg.py  normalise.py  train.py  train_sweep.py
src/terra/: __init__.py  hub.py
tests/test_aggregators/: test_aggregate_by_radius.py  test_aggregate_by_sum_of_neighbours.py
tests/test_datasets/: test_cell_neighborhood_dataset.ipynb  test_truncation.py
tests/test_inference/: test_downstream_smoke.py  test_pipeline_smoke.py
tests/test_masks/: test_multigene.ipynb  test_utils.ipynb
tests/test_model/: emb_extractor.py
tests/test_models/: test_batch_conditioning.py  test_batch_labels.py  test_classification_model.py  test_cycle_consistency.py  test_distribution_alignment.py  test_gene_transformer.ipynb  test_protein_init.py  test_protocol_moe.py  test_rda.py  test_spatial_encoding.py  test_special_token_moe.py
tests/test_normalizers/: test_analytic_pearson_residuals.py  test_cell_area.py  test_mean_normalize.py  test_mean_normalize_by_gene.py  test_non_zero_median.py  test_seurat_v3.py
tests/test_preprocessors/: test_analytic_pearson_residuals.py  test_cell_area.py  test_filter_poor_quality_cells.py  test_read_depth.py  test_seurat_v3.py
tests/test_tokenizers/: test_tokenize.py
tests/test_training/: test_decode_losses.py
(+376 files in other folders)
