[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
# Import package is 'terra' (src/terra). PyPI distribution name is 'terra-st'
# because the bare 'terra' name is already taken on PyPI (the import name
# 'terra' is unaffected by that).
packages = ["src/terra"]

[project]
name = "terra-st"
version = "0.1.6"
description = "Spatial transcriptomics foundation model"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Sebastian Birk"},
    {name = "Mohammad Vali Sanian"},
]
maintainers = [
    {name = "Sebastian Birk", email = "sebastian.birk@helmholtz-munich.de"},
    {name = "Mohammad Vali Sanian", email = "mohammad.sanian@helsinki.fi"},

]
urls.Documentation = "https://terra-st.readthedocs.io/"
urls.Source = "https://github.com/Lotfollahi-lab/terra"
urls.Homepage = "https://github.com/Lotfollahi-lab/terra"
urls.Changelog = "https://github.com/Lotfollahi-lab/terra/blob/main/CHANGELOG.md"
urls.Issues = "https://github.com/Lotfollahi-lab/terra/issues"
keywords = [
    "spatial transcriptomics",
    "foundation model",
    "JEPA",
    "single-cell",
    "representation learning",
    "deep learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Lower bounds are modern versions known to work with TERRA. The exact,
    # fully-pinned reproducible environment TERRA is developed/tested against
    # lives in `uv.lock` (use `uv sync` to reproduce it precisely).
    "anndata>=0.10",
    "squidpy>=1.4",
    "scib-metrics>=0.5",
    "scikit-misc>=0.3",
    "transformers>=4.44",
    # torch is given a deliberately broad floor: the CUDA build must match the
    # user's NVIDIA driver and is installed separately (see the README), so we
    # must not force an upgrade to a specific CUDA wheel here.
    "torch>=2.1",
    # Cap below 5.0: datasets 5.x changed Dataset column handling and breaks
    # perturb_dataset's per-perturbation flag columns (tested-good is 4.x).
    "datasets>=2.18,<5",
    # for debug logging (referenced from the issue template)
    "session-info>=1.0",
    "peft>=0.10",
    "pyensembl>=2.2",
    "leidenalg>=0.9",
    # config files are parsed with PyYAML (terra.inference, terra.utils.config)
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "twine>=4.0.2",
]
doc = [
    "docutils>=0.8,!=0.18.*,!=0.19.*",
    "sphinx>=4",
    "sphinx-book-theme>=1.0.0",
    "myst-nb",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
    "sphinxext-opengraph",
    "sphinx-design",
    # For notebooks
    "ipykernel",
    "ipython",
    "sphinx-copybutton",
    "pandas",
]
test = [
    "pytest",
    "coverage",
]
# Training only. The training entry points (terra.training.*) import wandb for
# experiment tracking; install this extra to run them.
train = [
    "wandb>=0.16",
]
# Running the tutorial / example notebooks interactively.
notebook = [
    "jupyterlab>=4",
    "ipykernel>=6",
]
eval = [
    "cellphonedb",
    "omnipath"
]
# In-silico perturbation scoring. terra.inference.token_distance and
# summarize_distance use GeomLoss for the point-cloud (Sinkhorn/energy/MMD)
# distances between unperturbed and perturbed embeddings.
perturb = [
    "geomloss>=0.2.6",
]
# Publish/download TERRA model bundles on the Hugging Face Hub (terra.hub).
hub = [
    "huggingface_hub>=0.20",
]

[project.scripts]
# CLI for publishing/downloading TERRA models: `terra-hub upload|download ...`
terra-hub = "terra.hub:main"

[tool.coverage.run]
source = ["terra"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]

[tool.ruff]
line-length = 120
src = ["src"]
extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",  # Errors detected by Pyflakes
    "E",  # Error detected by Pycodestyle
    "W",  # Warning detected by Pycodestyle
    "I",  # isort
    "D",  # pydocstyle
    "B",  # flake8-bugbear
    "TID",  # flake8-tidy-imports
    "C4",  # flake8-comprehensions
    "BLE",  # flake8-blind-except
    "UP",  # pyupgrade
    "RUF100",  # Report unused noqa directives
]
ignore = [
    # line too long -> we accept long comment lines; formatter gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # allow I, O, l as variable names -> I is the identity matrix
    "E741",
    # Missing docstring in public package
    "D104",
    # Missing docstring in public module
    "D100",
    # Missing docstring in __init__
    "D107",
    # Errors from function calls in argument defaults. These are fine when the result is immutable.
    "B008",
    # __magic__ methods are are often self-explanatory, allow missing docstrings
    "D105",
    # first line should end with a period [Bug: doesn't work with single-line docstrings]
    "D400",
    # First line should be in imperative mood; try rephrasing
    "D401",
    ## Disable one in each pair of mutually incompatible rules
    # We don’t want a blank line before a class docstring
    "D203",
    # We want docstrings to start immediately after the opening triple quote
    "D213",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["I"]
"tests/*" = ["D"]
"*/__init__.py" = ["F401"]

[tool.cruft]
skip = [
    "tests",
    "src/**/__init__.py",
    "docs/api.md",
    "docs/changelog.md",
    "docs/references.bib",
    "docs/references.md",
]
